# hermes

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel
.github/workflows/: build.yml  push.yml  qa.yml
bazel/: cc_rules.bzl
benchmark_lab/: BUILD.bazel  abseil_container_wrapper.hpp  lookup.cpp  std_container_wrapper.hpp
check_me/: CMakeLists.txt
check_me/include/logger/: logger.hpp
check_me/src/: main.cpp  stock_data.hpp  stock_exchange_market.cpp  stock_exchange_market.hpp
example/abseil/: BUILD.bazel
example/data_file/: BUILD.bazel  data_file_test.cpp
example/message_queue/: BUILD.bazel  semaphore.hpp
example/message_queue/tests/: BUILD.bazel  message_queue_test.cpp  processor_test.cpp  stage_test.cpp
example/mixed/: BUILD.bazel  lambda_test.cpp  matcher_explanation_test.cpp  struct_cmp_test.cpp  visitor_test.cpp
example/protobuf/: BUILD.bazel
example/protobuf/tests/: BUILD.bazel  codec_test.cpp
example/strong_type/: BUILD.bazel  addable.hpp  orderable.hpp  strong_type.hpp
example/strong_type/tests/: BUILD.bazel  strong_type_test.cpp
gdb_printer/pvalue/: BUILD.bazel  pvalue.py
gdb_printer/pvalue/test/: BUILD.bazel  scenario.py  test.sh  types.cpp
lab/data_file/: BUILD.bazel  data_file_test.cpp
lab/message_queue/: message_queue.hpp  processor.hpp  stage.hpp
lab/message_queue/tests/: BUILD.bazel  message_queue_test.cpp  processor_test.cpp  stage_test.cpp
lab/mixed/: exception_test.cpp  lambda_test.cpp  matcher_explanation_test.cpp  struct_cmp_test.cpp  unique_ptr_mock_test.cpp
lab/protobuf/tests/: BUILD.bazel  codec_test.cpp
logger/: logger.hpp
src/: CMakeLists.txt  book.cpp  main.cpp  my_math.cpp  my_math.h  page.cpp  page.hpp
src/logger/: logger.hpp
src/message_queue/: BUILD.bazel  message_queue.hpp  processor.hpp  semaphore.hpp  stage.hpp
src/message_queue/tests/: BUILD  BUILD.bazel  message_queue_test.cpp  processor_test.cpp  stage_test.cpp
src/protobuf/: BUILD.bazel  person.pb.cc  person.pb.h  person.proto
src/protobuf/tests/: BUILD.bazel  codec_test.cpp
src/server/: BUILD.bazel  CMakeLists.txt  loop_server.cpp
tests/: CMakeLists.txt  book_test.cpp  main_test.cpp  mtest_test.cpp  my_math_tests.cpp  page_fake.cpp  page_mock.cpp  page_mock.hpp
tests/benchmark_containers/: CMakeLists.txt
tests/containers_benchmark/: BUILD.bazel  CMakeLists.txt  vector.cpp
tests/googletest/: googletest-download.cmake  googletest.cmake
tests/message_queue/: CMakeLists.txt  message_queue_test.cpp  processor_test.cpp  stage_test.cpp
tests/mixed/: BUILD.bazel  CMakeLists.txt  exception_test.cpp  polymorphic_mock_test.cpp  struct_cmp_test.cpp
tests/visitor/: CMakeLists.txt  visitor_test.cpp
tests_libs/: CMakeLists.txt
tests_libs/benchmark/: CMakeLists.txt  benchmark-download.cmake
tests_libs/googletest/: CMakeLists.txt  googletest-download.cmake  googletest.cmake
tools/: build.sh  refresh_compile_commands.sh  test_all.sh
