"""
This is the MODULE.bazel file for the 'hermes' module.
"""

# Project
module(name = "unitatem-hermes")

# Dependencies

bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)

bazel_dep(
    name = "googletest",
    version = "1.16.0",
    repo_name = "com_google_googletest",
)

bazel_dep(
    name = "google_benchmark",
    version = "1.9.1",
    repo_name = "com_google_benchmark",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20250127.0",
    repo_name = "com_google_absl",
)

bazel_dep(
    name = "protobuf",
    version = "30.1",
    repo_name = "com_google_protobuf",
)

bazel_dep(
    name = "rules_proto",
    version = "7.1.0",
    repo_name = "rules_proto",
)
