load("//bazel:cc_rules.bzl", "hermes_cc_test")

hermes_cc_test(
    name = "data_file_test",
    srcs = [
        "data_file_test.cpp",
    ],
    data = [
        ":resources/config.txt",
    ],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
