cc_test(
    name = "exception_test",
    srcs = ["exception_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "lambda_test",
    srcs = ["lambda_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "matcher_explanation_test",
    srcs = ["matcher_explanation_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "unique_ptr_mock_test",
    srcs = ["unique_ptr_mock_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "struct_cmp_test",
    srcs = ["struct_cmp_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "visitor_test",
    srcs = ["visitor_test.cpp"],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
