load("//bazel:cc_rules.bzl", "hermes_cc_test")

hermes_cc_test(
    name = "message_queue_test",
    srcs = ["message_queue_test.cpp"],
    deps = [
        "//example/message_queue",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

hermes_cc_test(
    name = "processor_test",
    srcs = ["processor_test.cpp"],
    deps = [
        "//example/message_queue",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

hermes_cc_test(
    name = "stage_test",
    srcs = ["stage_test.cpp"],
    deps = [
        "//example/message_queue",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
