load("//bazel:cc_rules.bzl", "hermes_cc_test")

hermes_cc_test(
    name = "codec_test",
    srcs = ["codec_test.cpp"],
    cxxopts = [
        "-Wno-pedantic",
        "-Wno-shadow",
    ],
    deps = [
        "//example/protobuf:person",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
