load("//bazel:cc_rules.bzl", "hermes_cc_binary")

hermes_cc_binary(
    name = "types",
    srcs = [
        "types.cpp",
    ],
)

sh_test(
    name = "test",
    srcs = [
        "test.sh",
    ],
    data = [
        "scenario.py",
        ":types",
        "//gdb_printer/pvalue",
    ],
    tags = ["manual"],
)
